Updated files for redeployment

--- a/templates/index.html
+++ b/templates/index.html
@@ -136,9 +136,7 @@
     <h1>Brailleverse</h1>
     <div class="container" role="main">
         <div class="image-input-wrapper">
-            <img src="{{ url_for('static', filename='image.jpg') }}" alt="Interface Image depicting Braille conversion">
-
-            
+            <img src="{{ url_for('static', filename='image.jpg') }}" alt="Image Description">
 
         </div>
         <div class="input-section">
