--- a/templates/speech.html
+++ b/templates/speech.html
@@ -195,7 +195,7 @@
     <h1>Speech Input</h1>
     <div class="container">
         <div class="image-input-wrapper">
-            <img src="{{ url_for('static', filename='image.jpg') }}" alt="Interface Image depicting Braille conversion">
+            <img src="{{ url_for('static', filename='image.jpg') }}" alt="Image Description">
         </div>
         <div class="input-section">
             <div class="output-box" id="outputBox" role="region" aria-live="polite">Your speech will appear here...</div>
