--- a/templates/text.html
+++ b/templates/text.html
@@ -182,7 +182,7 @@
     <h1>Text Input</h1>
     <div class="container">
         <div class="image-input-wrapper">
-            <img src="{{ url_for('static', filename='image.jpg') }}" alt="Interface Image depicting Braille conversion">
+            <img src="{{ url_for('static', filename='image.jpg') }}" alt="Image Description">
         </div>
         <div class="input-section">
             <textarea class="text-input" id="textInput" placeholder="Type your text here..." aria-label="Text input area"></textarea>
