--- a/templates/image.html
+++ b/templates/image.html
@@ -168,7 +168,7 @@
     <div class="scrollable-container">
         <div class="container">
             <div class="image-upload-wrapper">
-                <img src="{{ url_for('static', filename='image.jpg') }}" alt="Interface Image depicting Braille conversion">
+                <img src="{{ url_for('static', filename='image.jpg') }}" alt="Image Description">
                 <img id="uploaded-image" src="" alt="Uploaded Image Preview" style="display:none;">
             </div>
             <div class="upload-section">
